--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,8 @@
 
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-</head>
-
+  <%= stylesheet_link_tag 'stylesheet'%> </head>
 <body>
-<p class="notice"><%= notice %></p>
 <%= yield %>
 </body>
 </html>
